Metaballs don't get rendered in Cycles when they are multi user #38740

Closed
opened 2014-02-21 13:11:29 +01:00 by Frederik Steinmetz · 8 comments

System Information
Windows 7, 64 bit, GeForce 560Ti

Blender Version
2.63, 2.68, 2.69

Short description of error
If you make a linked copy of a metaball, it will be visible in the viewport in solid / wireframe mode, but not Cycles rendered preview. It will also not render in Cycles, but seams to work in BI

Exact steps for others to reproduce the error
Add -> Metaball -> Ball
ALT + D, move it a little
switch to rendered view or press F12

Pressing U -> Object and Data makes them appear again.

**System Information** Windows 7, 64 bit, GeForce 560Ti **Blender Version** 2.63, 2.68, 2.69 **Short description of error** If you make a linked copy of a metaball, it will be visible in the viewport in solid / wireframe mode, but not Cycles rendered preview. It will also not render in Cycles, but seams to work in BI **Exact steps for others to reproduce the error** Add -> Metaball -> Ball ALT + D, move it a little switch to rendered view or press F12 Pressing U -> Object and Data makes them appear again.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FrederikSteinmetz

Added subscriber: @FrederikSteinmetz

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Brecht Van Lommel was assigned by Thomas Dinges 2014-02-21 13:16:40 +01:00

This issue was referenced by blender/blender-addons-contrib@415adf7263

This issue was referenced by blender/blender-addons-contrib@415adf72636b2e5981b1b68f4ff5ae2e60a965c6

This issue was referenced by 415adf7263

This issue was referenced by 415adf72636b2e5981b1b68f4ff5ae2e60a965c6

Thanks for the report, fixed now.

Thanks for the report, fixed now.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 415adf7263.

Closed by commit 415adf7263.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38740
No description provided.