Fix T38740: multi-user metaballs not rendering in Cycles.